--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.6.5",
+    "nodemon": "^2.0.20",
     "react-custom-scrollbars": "^4.2.1",
     "simple-random-number-generator": "^1.2.1",
     "uuid": "^9.0.0"
